Add gateway user provisioning endpoint
